Fix addresse description list formatting on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -154,3 +154,5 @@ a {
   margin: 0;
   padding: 0;
 }
+
+dl, dt, dd { margin: 0; }
